--- a/content.tex
+++ b/content.tex
@@ -1,6 +1,24 @@
-\section{Test}
-\par Merhaba nasılsın
+\documentclass[paper=a4, fontsize=11pt]{scrartcl}
 
-\subsection{Merhjaba}
-\par halelujah
+\title{
+	\huge \strut Software Requirement Document \strut \\
+	\Large \bfseries \strut NutriTrack Nutrient Tracking Application \strut
+}
+\usepackage{indentfirst}
+\author{ 									\usefont{OT1}{bch}{m}{n}
+        Onat Bas\\
+        Bogazici University\\
+        Computer Engineering Department\\
+        \texttt{onatbas ~ gmail.com}
+}
+%\date{}
 
+\begin{document}
+\maketitle
+
+\newpage
+\input{introduction}
+
+
+
+\end{document}
