--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-\par Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean comm
-
-
-\input{requirements}
+\subsection{Project Description}
+\par NutriTrack is designed as a Web application with which users
+can track their nutrition values by providing what they eat and
+their activity information by providing their daily activities.
