Update on document

--- a/content.tex
+++ b/content.tex
@@ -1,4 +1,4 @@
-\documentclass[paper=a4, fontsize=11pt]{scrartcl}
+\documentclass[paper=a4, fontsize=11pt]{article}%{scrartcl}
 
 \title{
 	\huge \strut Software Requirement Document \strut \\
@@ -15,7 +15,11 @@
 
 \begin{document}
 \maketitle
+
 \newpage
+\tableofcontents
+\newpage
+
 \input{introduction}
 
 \newpage
