--- a/requirements.tex
+++ b/requirements.tex
@@ -1,11 +1,10 @@
 \section{Requirements}
-
 \begin{enumerate}
-\item User is inspired to undertake a healthier lifestyle
+\item Users adapt a healthier lifestyle 
 	\begin{enumerate}
 	\item Functional Requirements
 		\begin{enumerate}
-		\item User Signup and Login
+		\item Users should sign-up to 
 			\begin{enumerate}
 			\item Personal information is collected during user sign up
 			\item Users that have already signed up are able to login
@@ -63,6 +62,7 @@
 			\end{itemize}
 		\end{enumerate}
 		\end{enumerate}
+\newpage
 	\item Non-functional Requirements
 		\begin{enumerate}
 		\item User continuity
