Chnanges on introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -3,3 +3,9 @@
 \par NutriTrack is designed as a Web application with which users
 can track their nutrition values by providing what they eat and
 their activity information by providing their daily activities.
+
+\par This document is created to serve both as a design document as well as 
+a detailed description. Requirements and technical information will also be provided.
+
+The recommended way of reading this document is to have a digital copy 
+available nearby so you may see the referenes while you're reading the document.
