Updates on seuqnece digrams

--- a/content.tex
+++ b/content.tex
@@ -1,10 +1,11 @@
-\documentclass[paper=a4, fontsize=11pt]{article}%{scrartcl}
+\documentclass[12pt]{extarticle}%{scrartcl}
 
 \title{
 	\huge \strut Software Requirement Document \strut \\
 	\Large \bfseries \strut NutriTrack Nutrient Tracking Application \strut
 }
 \usepackage{indentfirst}
+\usepackage{graphicx}
 \author{ 									\usefont{OT1}{bch}{m}{n}
         Onat Bas\\
         Bogazici University\\
@@ -24,5 +25,8 @@
 
 \newpage
 \input{requirements}
+
+\newpage
+\input{design}
 
 \end{document}
