--- a/requirements.tex
+++ b/requirements.tex
@@ -88,5 +88,13 @@
 			\item Data about a user is only visible if email and password data are present
 			\end{enumerate}
 		\end{enumerate}
+		\item System Requirements
+		\begin{enumerate}
+		\item System must be python2.7 compliant.
+		\item System must operate on ubuntu14.06 32bit or higher distribution.
+		\item System must be run with Django 1.10.3, explicitly.
+		\item System requires a database with SQL standard compliance.
+		\item Network must be publicly available for given network port.		
+		\end{enumerate}
 	\end{enumerate}
 \end{enumerate}
