--- a/design.tex
+++ b/design.tex
@@ -29,14 +29,14 @@ In this section, processes will be explained with sequence diagrams.
 
 \newpage
 \subsubsection{Sign-up Process}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.70]{signup}
 \end{figure}
 
 \newpage
 \subsubsection{Sign-in Process}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.70]{signin}
 \end{figure}
@@ -44,7 +44,7 @@ In this section, processes will be explained with sequence diagrams.
 
 \newpage
 \subsubsection{Food Search Process}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.70]{search_food}
 \end{figure}
@@ -53,7 +53,7 @@ In this section, processes will be explained with sequence diagrams.
 
 \newpage
 \subsubsection{Activity Search and Tracking Process}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.70]{activity}
 \end{figure}
@@ -62,7 +62,7 @@ In this section, processes will be explained with sequence diagrams.
 
 \newpage
 \subsubsection{Food Tracking Process}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.70]{consumation}
 \end{figure}
