--- a/content.tex
+++ b/content.tex
@@ -6,6 +6,7 @@
 }
 \usepackage{indentfirst}
 \usepackage{graphicx}
+\usepackage{float}
 \author{ 									\usefont{OT1}{bch}{m}{n}
         Onat Bas\\
         Bogazici University\\
