Added hyperref and pictures

--- a/design.tex
+++ b/design.tex
@@ -66,3 +66,49 @@ In this section, processes will be explained with sequence diagrams.
 \centering
 \includegraphics[scale=0.70]{consumation}
 \end{figure}
+
+\newpage
+\subsection{High-Level View and User Interface Design}
+
+In this section, the design will be explained in iterative steps.
+First, draft will give an idea of how the webpage is ideally designed to look like. This first sketch is drawn by-hand on purpose because, 
+design initially doesn't really rely on the tools.
+
+
+\subsubsection{Initial Design}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.235]{1}
+\end{figure}
+
+
+This design has been designed in HTML/CSS for a technical view. Here's
+the initial mockup. The initial mockup doesn't include the graph charts.
+
+\subsubsection{Main View}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.38]{2}
+\end{figure}
+
+This view is implemented with Bootstrap elements along with custom CSS
+scripts. With this general concept in mind, further mockups with similar styles are created. 
+
+\subsubsection{Screen 2}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.38]{3}
+\end{figure}
+
+
+\subsubsection{Screen 3}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.38]{4}
+\end{figure}
+
+\subsubsection{Screen 4}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.38]{5}
+\end{figure}
