Added recent changes

--- a/design.tex
+++ b/design.tex
@@ -112,3 +112,15 @@ scripts. With this general concept in mind, further mockups with similar styles 
 \centering
 \includegraphics[scale=0.38]{5}
 \end{figure}
+
+
+\section{Plan}
+\subsection{Project Development Plan}
+
+The initial time estimate were made on estimates on three major sprints.
+You my view the estimates in the following figure. Each colored cell represents a 5-day period.
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.38]{projectplan}
+\end{figure}
