--- a/content.tex
+++ b/content.tex
@@ -7,6 +7,7 @@
 \usepackage{indentfirst}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage{booktabs}
 \hypersetup{
     bookmarks=true,         % show bookmarks bar?
     unicode=false,          % non-Latin characters in Acrobat’s bookmarks
@@ -20,6 +21,29 @@
     citecolor=green,        % color of links to bibliography
     filecolor=magenta,      % color of file links
     urlcolor=cyan           % color of external links
+}
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
 }
 \usepackage{float}
 \author{ 									\usefont{OT1}{bch}{m}{n}
@@ -44,5 +68,8 @@
 
 \newpage
 \input{design}
+
+\newpage
+\input{deployment}
 
 \end{document}
